--- a/Develop/index.html
+++ b/Develop/index.html
@@ -18,7 +18,7 @@
   <header class="p-5 mb-4">
     <h1 class="display-3">Work Day Scheduler</h1>
     <p class="lead">A simple calendar app for scheduling your work day</p>
-    <p id="currentDay" class="lead"></p>
+    <p id="currentDay" class="lead">todays date</p>
   </header>
   <div class="container-fluid px-5">
     <!-- Use class for "past", "present", and "future" to apply styles to the
@@ -124,6 +124,7 @@
     integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
 
   <script src="script.js"></script>
+  
 </body>
 
 </html>
